welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:9: error: type mismatch;
 found   : Unit
 required: Int
  } else if (min < 10) {
         ^